# docs/swagger.yaml
@@ -63,6 +63,13 @@ definitions:
     - email
     - password
     type: object
+  dto.UpdateBookingStatus:
+    properties:
+      status:
+        type: string
+    required:
+    - status
+    type: object
   dto.UpdateService:
     properties:
       description:
@@ -229,6 +236,47 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Get a booking by ID
+      tags:
+      - Bookings
+  /booking/{id}/status:
+    put:
+      consumes:
+      - application/json
+      description: Update status a booking with the provided details.
+      parameters:
+      - description: Booking ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Booking details to be updated
+        in: body
+        name: booking
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UpdateBookingStatus'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Booking updated successfully
+          schema:
+            $ref: '#/definitions/response.Success'
+        "400":
+          description: Invalid request body
+          schema:
+            $ref: '#/definitions/response.Error'
+        "404":
+          description: Booking not found
+          schema:
+            $ref: '#/definitions/response.Error'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/response.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: Update status a booking
       tags:
       - Bookings
   /bookings:
