# internal/dto/booking.go
@@ -8,3 +8,14 @@ type CreateBooking struct {
 	Notes       string    `json:"notes"`
 	ServiceIDs  []string  `json:"service_ids" binding:"required"`
 }
+
+type UpdateBooking struct {
+	BookingDate time.Time `json:"booking_date"`
+	Notes       string    `json:"notes"`
+	ServiceIDs  []string  `json:"service_ids"`
+	Status      string    `json:"status"`
+}
+
+type UpdateBookingStatus struct {
+	Status string `json:"status" binding:"required"`
+}
